--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
  {
-  "name": "alexa-spotify-connect",
-  "description": "Control Spotify Connect devices with Alexa",
-  "repository": "https://github.com/thorpelawrence/alexa-spotify-connect",
+  "name": "alexa-spotify-connect-german",
+  "description": "Control Spotify Connect devices with German Alexa",
+  "repository": "https://github.com/pschlieker/alexa-spotify-connect",
   "keywords": ["amazon", "alexa", "echo", "spotify", "connect", "node", "nodejs", "js"]
 }
